@@ -1,3 +1,7 @@
+2013-05-09 Thu  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el: Correct spelling of autoload word.
+
 2012-10-18 Thu  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-files-recursive-lisp): Check FILE before
